--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-three-vite",
   "version": "1.0.1",
+  "homepage": "https://willmadd.github.io/space-scene",
   "description": "A simple React Three Fiber + Vite starter with an import-ready CodeSandbox config.",
   "keywords": [
     "r3f",
@@ -19,7 +20,9 @@
     "@react-three/cannon": "^6.3.0",
     "@react-three/drei": "9.11.3",
     "@react-three/fiber": "8.0.19",
-    "@react-three/postprocessing": "^2.4.6",
+    "@react-three/postprocessing": "^2.5.0",
+    "gh-pages": "^4.0.0",
+    "postprocessing": "^6.28.4",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "three": "0.140.2"
@@ -32,7 +35,9 @@
     "dev": "vite --host",
     "sandbox": "APP_ENV=sandbox vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "browserslist": [
     ">0.2%",
